--- a/双重检查锁定漏洞分析笔记.md
+++ b/双重检查锁定漏洞分析笔记.md
@@ -195,5 +195,10 @@
             }
 
 
-如果Helper是一个不可变的对象，这样Helper的所有字段都是final的，那么双重检查锁定就可以工作，而不必使用volatile字段
++ 如果Helper是一个不可变的对象，这样Helper的所有字段都是final的，那么双重检查锁定就可以工作，而不必使用volatile字段
 对一个不可变对象（比如一个String或者一个Integer）的引用应该和int或者float类似。读取和写入对不可变对象的引用是原子操作。
+
+## 说明
+
+笔记内容来自:<br>
+[The "Double-Checked Locking is Broken" Declaration](http://www.cs.umd.edu/~pugh/java/memoryModel/DoubleCheckedLocking.html)
