--- a/双重检查锁定漏洞分析笔记.md
+++ b/双重检查锁定漏洞分析笔记.md
@@ -5,6 +5,7 @@
 它通常用于减少加锁开销，尤其是为多线程环境中的`单例模式`实现“`惰性初始化`”。惰性初始化的意思是直到第一次访问时才初始化它的值。<br><br>
 ---- from [wikipedia](https://zh.wikipedia.org/wiki/%E5%8F%8C%E9%87%8D%E6%A3%80%E6%9F%A5%E9%94%81%E5%AE%9A%E6%A8%A1%E5%BC%8F#Java.E4.B8.AD.E7.9A.84.E4.BD.BF.E7.94.A8)
 
+
 ## 代码的演变:
 
 1. 最开始的代码:
@@ -62,14 +63,18 @@
         // other functions and members...
         }
 
+
 + 【我是重点】然而问题来了,这份代码在`编译器`和`共享内存多处理器`的优化(即重排序)下是无效的.
+
 + 为什么无效?有两个原因,第一个原因(第二个原因看`代码4`):
+
 
     >  the writes that initialize the Helper object and the write to the helper field can be done or perceived out of order. Thus, a thread which invokes getHelper() could see a non-null reference to a helper object, but see the default values for fields of the helper object, rather than the values set in the constructor.<br><br>
     大致意思是`Helper对象的初始化`(这里特指`<init>`方法,注意区分`对象初始化`与`类初始化`)和`对象写入helper域`可以是无序的.因此，一个调用getHelper()的线程可以看到helper对象的非空引用，但是看到的`helper的字段是默认值`(零值)，而不是在构造函数中设置的值。([参考对象创建过程](https://github.com/wususu/Notes/blob/master/%E6%B7%B1%E5%85%A5%E7%90%86%E8%A7%A3Java%E8%99%9A%E6%8B%9F%E6%9C%BA%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0/Java%E5%86%85%E5%AD%98%E5%8C%BA%E5%9F%9F%E5%88%92%E5%88%86.md))
 
-    > singletons[i].reference = new Singleton();这段代码在`Symantec JIT编译`后如下:<b>
+    > singletons[i].reference = new Singleton();这段代码在`Symantec JIT编译`后如下:<br>
     显然,对象的`分配`发生在`对象初始化`之前,这在Java内存模型中是合法的.
+
 
         0206106A   mov         eax,0F97E78h
         0206106F   call        01F6B210                  ; 为单例分配空间
