--- a/设计模式六大原则.md
+++ b/设计模式六大原则.md
@@ -1,6 +1,6 @@
 # 设计模式六大原则
 
-### 一.[单一职业链原则](http://blog.csdn.net/zhengzhb/article/details/7278174)
+### 一.[单一职责链原则](http://blog.csdn.net/zhengzhb/article/details/7278174)
 
 不要存在多于一个导致类变更的原因(一个类只负责一项职责)<br/>
 (要在类的职责扩散到无法控制之前,立即重构)
