--- a/设计模式/抽象工厂模式.md
+++ b/设计模式/抽象工厂模式.md
@@ -58,3 +58,8 @@
 3. 属于同一个产品族的产品将在一起使用，这一约束必须在系统的设计中体现出来。同一个产品族中的产品可以是没有任何关系的对象，但是它们都具有一些共同的约束，如同一操作系统下的按钮和文本框，按钮与文本框之间没有直接关系，但它们都是属于某一操作系统的，此时具有一个共同的约束条件：操作系统的类型.
 
 4. 产品等级结构稳定，设计完成之后，不会向系统中增加新的产品等级结构或者删除已有的产品等级结构.
+
+引自
+> [工厂三兄弟之抽象工厂模式](https://quanke.gitbooks.io/design-pattern-java/%E6%8A%BD%E8%B1%A1%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F-Abstract%20%20Factory%20Pattern.html)
+
+> [抽象工厂模式(Abstract Factory)](http://design-patterns.readthedocs.io/zh_CN/latest/creational_patterns/abstract_factory.html)
