--- a/面经/1.md
+++ b/面经/1.md
@@ -34,7 +34,9 @@ Python，Python比Java更加短小精悍，现成的库更丰富
 
 MySQL，了解数据库索引原理，没了解过查询优化。然后没有继续问了
 
-8. 后面就是实习天数和时长了
+8. Linux上的部署
+
+9. 后面就是实习天数和时长了
 
 ## 二面
 
@@ -76,6 +78,10 @@ Scrapy，忘记单词了，我说是S开头的框架，算我过。。。
 9. 使用Redis做过什么
 
 存session，做token鉴权的存储层
+
+10. 自己实现过的IP代理池原理
+
+爬取免费IP，存入临时阻塞队列（说到阻塞队列就说够了，可能觉得我会就不用继续说）再针对要爬取的网站验证IP可用性，存入正式阻塞队列
 
 最后小哥说留下我的简历～nice！
 
